# scikit-reducedmodel

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Pendulo-AGUS.ipynb  Pendulo-Copy1.ipynb  README.md  Untitled.ipynb  demo.ipynb  index.html  informe.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt_viejo  runs-Copy1.ipynb  runs.ipynb  test_partition_choose_child.ipynb  tox.ini
.github/workflows/: ci.yml
Scikit-ReducedModel-0.0.1/: LICENCE  PKG-INFO  Pendulo-AGUS.ipynb  README.md  Untitled.ipynb  requirements.txt
Scikit-ReducedModel-0.0.1/skreducedmodel/: mksurrogate.py  surrogate.py
docs/: requirements.txt  requirements.txt~
docs/source/: conf.py  index.rst  index.rst~  installation.rst  license.rst  modules.rst  skreducedmodel.rst
docs/source/tutorials/: Pendulo.ipynb  demo.ipynb  index.rst  index.rst~  runs.ipynb
examples/: Pendulo.ipynb  demo.ipynb
examples/waveforms/: q_train_1d-seed_eq_1.npy  times_1d-seed_eq_1.npy
old_code/: hpg_norm.py
old_code/arby-master/docs/source/: conf.py  pendulum.ipynb
old_code/arby-master/tests/: test_basis.py
skreducedmodel/: .empiricalinterpolation.py.swp  __init__.py  empiricalinterpolation.py  empiricalinterpolation.py~  mksurrogate.py  reducedbasis.py  reducedbasis.py~  reducedorderquadrature.py  surrogate.py  validators.py
tests/: 1  __init__.py  conftest.py  test_empiricalintepolation.py  test_integrals.py  test_mksurrogate.py  test_reducedbasis.py  test_reducedbasis.py~  test_reducedorderquadrature.py  test_skreducedmodel.py.NO  test_surrogate.py  test_validators.py
tests/waveforms/: q_test_1d-seed_eq_1.npy
