[tool.black]
line-length = 79
target-version = ["py310"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Scikit-ReducedModel"
version = "0.0.1"
authors = [{name = "Franco Cerino", email = "--@gmail.com"}]
license = {text = "The MIT License"}
readme = "README.md"
description = "Construction of Reduced Models in Python"
keywords = ["reduced models", "machine learning", "gravitational waves"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
urls = {Homepage = "https://github.com/francocerino/scikit-reducedmodel"}
dependencies = ["numpy", "scipy", "anytree", "gwtools"]

[tool.setuptools]
packages = ["skreducedmodel"]###, "skreducedmodel.*"]
include-package-data = true
