[tool.black]
line-length = 79
target-version = ["py310"]
 
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-reducedmodel"
version = "1.1"
authors = [{name = "Franco Cerino", email = "francocerino@gmail.com"}]
license = {text = "The MIT License"}
readme = "README.md"
description = "Construction of Reduced Models in Python"
keywords = ["reduced order model", "machine learning", "gravitational waves", "reduced basis", "surrogate model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
urls = {Homepage = "https://github.com/francocerino/scikit-reducedmodel"}
dependencies = ["numpy", "scipy", "anytree", "attr", "attrs", "gwtools","scikit-learn"]

[tool.setuptools]
packages = ["skreducedmodel"]###, "skreducedmodel.*"]
include-package-data = true
